# buddy-benchmark

./: CMakeLists.txt
benchmarks/DeepLearning/Models/MiniLM-L6/: CMakeLists.txt
benchmarks/DeepLearning/Ops/MatMulOp/: GoogleBenchmarkMain.cpp
benchmarks/OpOptimization/: CMakeLists.txt
benchmarks/OpOptimization/AffineOps/: Add2D.mlir  AffineOpsBenchmark.cpp  CMakeLists.txt  Main.cpp  Matmul.mlir  Reduction.mlir  Transpose.mlir  VectorAdd2D.mlir  VectorReduction.mlir  VectorTranspose.mlir  VectorizeMatmul.mlir  log.mlir  log.s  log1.mlir  log1.s  makefile
benchmarks/OpOptimization/Conv2DNchwFchw/: CMakeLists.txt  Conv2DNchwFchw1.mlir  Conv2DNchwFchw2.mlir  Conv2DNchwFchw4.mlir  Conv2DNchwFchwBenchmark.cpp  Conv2DNchwFchwIm2col1.mlir  Conv2DNchwFchwIm2col2.mlir  Conv2DNchwFchwIm2col4.mlir
benchmarks/OpOptimization/Conv2dNchwFchw/: Conv2DNchwFchwBenchmark.cpp  Conv2DNchwFchwIm2col-1.mlir  Conv2DNchwFchwIm2col-2.mlir  Conv2DNchwFchwIm2col-3.mlir  Conv2DNchwFchwIm2col-4.mlir  Conv2DNchwFchwIm2col-5.mlir  Main.cpp
benchmarks/OpOptimization/Convolution/TVM/CPU/: main.py
benchmarks/OpOptimization/MatMul/: CMakeLists.txt  Main.cpp  MatMul.mlir  MatMulBenchmark.cpp  MatMulBroadcast.mlir  MatMulOCV.mlir
benchmarks/OpOptimization/Matmul/: CMakeLists.txt  Matmul1.mlir  Matmul2.mlir  Matmul4.mlir  MatmulBenchmark.cpp
benchmarks/Vectorization/gccloops/: CMakeLists.txt  MLIRGccLoopsEx1Benchmark.cpp  MLIRGccLoopsEx1BenchmarkVec.cpp  MLIRGccLoopsEx1Vec.mlir  MLIRGccLoopsEx2bBenchmark.cpp  MLIRGccLoopsEx3Benchmark.cpp  MLIRGccLoopsEx4aBenchmark.cpp  Main.cpp
cmake/: buddy-benchmark.cmake  riscv-toolchain.cmake
